<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".authorize.RegActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:alpha="0.4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/reg_background" />

        <EditText
            android:id="@+id/regNameTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:digits="@string/accessChars"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/regName"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regTlb" />

        <EditText
            android:id="@+id/regSurnameTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:digits="@string/accessChars"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/regSurame"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regNameTextView" />

        <EditText
            android:id="@+id/regPatronymicTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:digits="@string/accessChars"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/regPatronymic"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regSurnameTextView" />

        <EditText
            android:id="@+id/regPhoneTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/regPhone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regDate" />

        <EditText
            android:id="@+id/regEmailTextView"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/regEmail"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPhoneTextView" />

        <RadioButton
            android:id="@+id/regVRButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="165dp"
            android:focusable="false"
            android:text="@string/regVolunteer"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPass" />

        <RadioButton
            android:id="@+id/regORButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:focusable="false"
            android:text="@string/regOrganizer"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPass" />

        <Spinner
            android:id="@+id/regCityList"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/regCity"
            android:background="#A6FBFBFB"
            android:backgroundTintMode="add"
            android:focusable="false"
            android:foregroundTint="@color/black"
            android:popupBackground="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regVRButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regDone"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:background="@color/mainBlue"
            android:focusable="false"
            android:fontFamily="@font/kumbh_sans"
            android:stateListAnimator="@android:anim/cycle_interpolator"
            android:text="@string/regDone"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regCityList" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/regTlb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/regPass"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/authPassLabel"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regEmailTextView" />

        <EditText
            android:id="@+id/regDate"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:focusable="false"
            android:foregroundTint="@color/black"
            android:hint="Дата рождения"
            android:inputType="date"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/regPatronymicTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>