<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/eventPrevImage"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="50dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/seeEvent"
        app:layout_constraintEnd_toStartOf="@+id/eventPrevTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/vivt_logo" />

    <TextView
        android:id="@+id/eventPrevTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sampleText"
        android:textAlignment="center"
        android:textColor="@color/mainBlue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventPrevImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventPrevDateLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/evDate"
        android:textColor="@color/mainBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventPrevImage"
        app:layout_constraintTop_toBottomOf="@+id/eventPrevTitle" />

    <TextView
        android:id="@+id/eventPrevDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sampleText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventPrevImage"
        app:layout_constraintTop_toBottomOf="@+id/eventPrevDateLabel" />

    <TextView
        android:id="@+id/eventPrevAddrLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/evAdress"
        android:textColor="@color/mainBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventPrevImage"
        app:layout_constraintTop_toBottomOf="@+id/eventPrevDate" />

    <TextView
        android:id="@+id/eventPrevAddr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sampleText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/eventPrevImage"
        app:layout_constraintTop_toBottomOf="@+id/eventPrevAddrLabel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seeEvent"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/my_button"
        android:stateListAnimator="@anim/nav_default_enter_anim"
        android:text="@string/evSeeEvent"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPrevAddr" />

</androidx.constraintlayout.widget.ConstraintLayout>